<resources>
    <string name="app_name">PixaGallary</string>
    <string name="action_settings">Settings</string>
    <string name="likes">likes</string>
    <string name="search">Search your image</string>
    <string name="close">close</string>
    <string name="fashion">Fashion</string>
    <string name="nature">Nature</string>
    <string name="backgrounds">Backgrounds</string>
    <string name="science">Science</string>
    <string name="education">Education</string>
    <string name="people">People</string>
    <string name="feelings">Feelings</string>
    <string name="religion">Religion</string>
    <string name="health">Health</string>
    <string name="places">Places</string>
    <string name="animals">Animals</string>
    <string name="industry">Industry</string>
    <string name="food">Food</string>
    <string name="computer">Computer</string>
    <string name="sports">Sports</string>
    <string name="transportation">Transportation</string>
    <string name="travel">Travel</string>
    <string name="buildings">Buildings</string>
    <string name="business">Business</string>
    <string name="music">Music</string>
    <string name="horisontal">horisontal</string>
    <string name="vertical">vertical</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>
